Fix z-index issues on product card

--- a/src/modules/product-card/product-card.css
+++ b/src/modules/product-card/product-card.css
@@ -44,7 +44,7 @@
     height: 100%;
     background: rgba(var(--shadow), 0.74);
     pointer-events: none;
-    z-index: 1;
+    z-index: 10;
     box-sizing: border-box;
 
     .product-card--row-1-plp &,
@@ -83,7 +83,7 @@
   padding: 0 24px 21px 0;
   color: var(--white);
   cursor: pointer;
-  z-index: 3;
+  z-index: 10;
 
   @media (--lg) {
     display: flex;
@@ -136,7 +136,7 @@
 
   @media (--lg) {
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     bottom: 0;
     left: 50%;
     display: block;
